fix: unvisible editor on firefox

--- a/src/pages/square/[boardName]/editor/style.module.scss
+++ b/src/pages/square/[boardName]/editor/style.module.scss
@@ -44,6 +44,7 @@
       // min-height: 50vh;
       height: 1.3em;
       padding-bottom: 40vh;
+      box-sizing: content-box;
     }
 
     .shadow {
